# Boardgame_AI

./: Arena.py  Coach.py  LICENSE  MCTS.py  MCTS2.py  README.md  games_available.py  main_hive.py  play_hive.py  play_tictactoe.py  profile_command  pyproject.toml  requirements.txt  train_hive.py  train_hive_graph.py  train_tictactoe.py
Templates/: Game.py  game.py  neuralnet.py  ui.py  viz.py
hive/: Board.py  Hive.py  HiveGame.py  HiveGameLogic_utils.py  HiveGame_old.py  HiveGame_wrong.py  HiveReadme.md  Movements.py  Piece.py  Ui.py  UiConstants.py  graph.py  hive.py  hive_conf.py  hive_game.py  hive_gamelogic.py  hive_ui.py  hive_ui_board.py  hive_utils.py  movements.py  ui.py  ui_hex.py  viz.py
hive/nn/: HiveNNet.py  NNet.py  hive_nn.py
hive/old/: HiveGame_old.py  HiveGame_wrong.py  Piece_backup.py  scratch_11.py
pretrained_models/tictactoe/: best.pth.tar  checkpoint_9.pth.tar
src/: Arena.py  Coach.py  Coach_MCGS.py  MCGS.py  MCTS.py  Players.py  arena.py  coach.py  coach_mcgs.py  config.py  mcgs.py  mcts.py  mcts2.py  nnet.py  players.py  utils.py
tests/: test_all_games.py  test_mcts.py  test_nnet.py  test_play_all_games.py  test_players.py  test_train_all_games.py
tictactoe/: ttt_conf.py  ttt_game.py  ttt_gamelogic.py  ttt_ui.py  ttt_viz.py
tictactoe/nn/: ttt_nn.py
