[tool.poetry]
name = "Boardgame-AI"
version = "0.1"
description = "A framework for training neural networks to play boardgames"
authors = ["Tue Boesen <tue.boesen@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
coloredlogs = "^15.0.1"
tqdm = "^4.66.2"
pygame = "^2.5.2"
graphviz = "^0.20.1"
igraph = "^0.11.4"
pynauty = "^2.8.6"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
