[project]
name = "Boardgame-AI"
version = "0.1.0"
description = "A framework for training neural networks to play boardgames"
authors = [
    { name = "Tue Boesen", email = "Tue.Boesen@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "graphviz>=0.21",
    "igraph>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "pynauty>=2.8.8.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]


[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
